--- a/index/index.html
+++ b/index/index.html
@@ -233,8 +233,8 @@
 			</div>
 		</div>	
 			
-	<a href="march.html">
-		<img src="https://staicyngongu.github.io/Marchcalendar/March.html" 
+	<a href="https://staicyngongu.github.io/Marchcalendar/March.html">
+		<img src="https://res.cloudinary.com/dw4yle7tl/image/upload/v1587029146/pandemic_kjpe3o.svg" 
 		alt="emoji" id="earth" class="responsive"
 		style="position: absolute; left: 280px; top: 760px;">
 	</a>
